<resources>
    <string name="app_name">맛집뭐먹지?</string>

    <!--text Hint -->
    <string name="id_hint">아이디</string>
    <string name="pw_hint">비밀번호</string>
    <string name="pw_check">비밀번호 확인</string>
    <string name="name_hint">이름</string>
    <string name="email_hint">이메일</string>
    <string name="login_click">로그인</string>
    <string name="register_click">회원가입</string>

    <!-- button text -->
    <string name="button_cancel">취소</string>
    <string name="button_confirm">중복확인</string>


</resources>



