<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true">


    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/title_bar_color">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/title_width"
            android:layout_height="@dimen/title_height"
            android:layout_marginVertical="@dimen/title_marginVertical"
            android:src="@drawable/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_click"
            android:textSize="@dimen/title_fontsize"
            android:textColor="@color/gray_color"
            android:textStyle="bold"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_above="@id/register_button">

    <LinearLayout
        android:id="@+id/input_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_hint"
            android:textSize="@dimen/super_font_size"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_input"
            android:layout_marginBottom="15dp"
            android:hint="@string/name_hint"
            android:paddingHorizontal="@dimen/default_horizontal"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textSize="@dimen/default_font_size"
            android:background="@drawable/edittext_input"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_hint"
                android:textSize="@dimen/super_font_size"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_input"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/id_hint"
                    android:paddingHorizontal="@dimen/default_horizontal"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_font_size"
                    android:background="@drawable/edittext_input"/>

                <Button
                    android:id="@+id/check_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/register_input"
                    android:layout_gravity="right"
                    android:layout_margin="@dimen/btn_margin"
                    android:layout_weight="2"
                    android:imeOptions="actionNone"
                    android:background="@drawable/id_check"
                    android:textSize="@dimen/big_font_size"
                    android:text="@string/button_confirm"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw_hint"
                android:textSize="@dimen/super_font_size"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/txt_pw"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_input"
                android:layout_marginBottom="15dp"
                android:hint="@string/pw_hint"
                android:paddingHorizontal="@dimen/default_horizontal"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:textSize="@dimen/default_font_size"
                android:background="@drawable/edittext_input"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw_check"
                android:textSize="@dimen/super_font_size"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/txt_pwcheck"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_input"
                android:layout_marginBottom="15dp"
                android:hint="@string/pw_check"
                android:paddingHorizontal="@dimen/default_horizontal"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:textSize="@dimen/default_font_size"
                android:background="@drawable/edittext_input"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_hint"
                android:textSize="@dimen/super_font_size"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_input"
                android:layout_marginBottom="15dp"
                android:hint="@string/email_hint"
                android:paddingHorizontal="@dimen/default_horizontal"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:textColor="@color/black"
                android:textSize="@dimen/default_font_size"
                android:background="@drawable/edittext_input"/>
        </LinearLayout>
                
    </ScrollView>

    <LinearLayout
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:textSize="@dimen/super_font_size"
            android:background="@color/light_gray_color"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/title_bar_color"
            android:text="@string/register_click"
            android:textSize="@dimen/super_font_size" />
    </LinearLayout>



</RelativeLayout>